api.yaml
apiVersion: apps/v1
kind: Deployment
metadata: { name: api, namespace: workshop }
spec:
  replicas: 2
  selector: { matchLabels: { app: api } }
  template:
    metadata: { labels: { app: api } }
    spec:
      containers:
      - name: api
        image: kennethreitz/httpbin
        ports: [{ name: http, containerPort: 80 }]
---
apiVersion: v1
kind: Service
metadata: { name: api, namespace: workshop }
spec:
  selector: { app: api }
  ports: [{ port: 80, targetPort: http }]
---
